Changelog
=========

6.1-dev - (unreleased)
----------------------
* Bug fix: Fixed tabular view columns format
  [voineali refs #9583]
* Feature: Allow editing of extra configuration for exhibit views
  [voineali refs #5521]

6.0 - (2012-10-08)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.exhibit
* Feature: Made this package Plone independent (Zope2 minimal requirements)
  [voineali refs #5421]

4.5-dev - (unreleased)
----------------------

4.4 - (2012-07-13)
------------------
* Bug Fix: Fixed i18n missing tags and duplicate keys in .pt files
  [prospchr refs #5162]

4.3 - (2012-06-12)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Feature: Added preview images for Exhibit Views
  [voineali refs #5024]
* Feature: Added possibility to customize lenses for all exhibit views not only
  for Tile View
  [voineali fixes #5112]
* Feature: Added unique URLs for exhibit tabs in order to easily bookmark and
  share them. Also support browser history (back and forward buttons)
  [voineali refs #4851]

4.2 - (2012-03-30)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.exhibit
  [voineali #4996]
* Feature: Refactoring to be able to use this package as a standalone or as
  part of eea.daviz bundle
  [voineali #4996]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-07)
------------------
* Bugfix: Fixed IE JS errors, fixed code that uses jQuery to avoid conflicts
  with other JS frameworks
  [szabozo0 #4542]
* Feature: Added upgrade steps
  [voineali #4392]
* Feature: ported package to plone 4.x
  [ichimdav #4233]

1.0 - (2011-03-16)
------------------
* Initial release
  [voineali]
