@@ -5,6 +5,8 @@ Changelog
 ----------------------
 * Bug fix: Fixed tabular view columns format
   [voineali refs #9583]
+* Feature: Allow distict columns for latitude and longitude
+  [voineali refs #9593]
 * Feature: Allow editing of extra configuration for exhibit views
   [voineali refs #5521]
 
